ingress/backendingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mpbackend-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: exam-aseds-ine2-backend.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mpbackend-service
              port:
                number: 8080
