ingress/frontendingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mpfrontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: exam-aseds-ine2-frontend.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mpfrontend-service
              port:
                number: 80
